2010-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: Add a null-check to fix a crash in #873.

2010-07-13  Andreia Gaita  <avidigal@novell.com>

	* debug.cpp: include the Moonlight namespace, it's needed in
	libunwind blocks

2010-07-13  Andreia Gaita  <avidigal@novell.com>

	Put all types inside a Moonlight namespace to avoid conflicts
	with external libraries

2010-07-13  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (HandleDzParsed): If width and height aren't
	set, set the AspectRation to 1. Fixes drt Seadragon-520.

2010-07-13  David Reveman  <davidr@novell.com>

	* projection.cpp (ExtendBoundsTo): Fix Z clipping error in
	bounds calculations for perspective transformations.
	(GetTransform): Use Matrix3D::Identity.

2010-07-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Add a gchandle to the callbacks, let the loader and
	the contexts own the callbacks, so callbacks dont get freed when
	we have templates inside templates.

2010-07-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: Add a null check to fix a crash with #964.

2010-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* bitmapimage.cpp: Fix crasher (Seadragon-HttpStatusCode-[HW|SW]) 
	when loader null-check fails and no moon_error is assigned.

2010-07-12  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.cpp (start_element): More validity-check
	fixes.

2010-07-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Each XamlContext should create a gchandle on the
	xaml loader so it doesn't get free'd while we are parsing
	templates.

2010-07-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Update.

2010-07-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Enable the reverse-pinvoke-exceptions debug option.

2010-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* brush.cpp: Fix crash on a BitmapSource (e.g. WriteableBitmap)
	in DRT641 (like similar change on media.cpp)
